--- a/templates/base.html
+++ b/templates/base.html
@@ -7,4 +7,9 @@
     {% block body %}
     {% endblock %}
     </body>
+    {% block footer %}
+    <footer>
+      <br> &copy Team Joe - Calvin Chu, Derek Leung, Jude Rizzo, Jason Zheng <br> "Who's Joe?" -That one guy
+    </footer>
+    {% endblock %}
 </html>
