Added routes and updated html files

--- a/templates/MainPage.html
+++ b/templates/MainPage.html
@@ -2,4 +2,7 @@
 {% block title %} Main Page {% endblock %}
 {% block body %}
 <h1> Main Page </h1>
+    <form action = "/Profile">
+      <input type="submit" value="Profile">
+    </form>
 {% endblock %}
