--- a/templates/ProfilePage.html
+++ b/templates/ProfilePage.html
@@ -2,4 +2,10 @@
 {% block title %} Main Page {% endblock %}
 {% block body %}
 <h1> Profile Page </h1>
+  <form action = "/Main">
+    <input type="submit" value="Back">
+  </form>
+  <form action = "/CreateBlog">
+    <input type="submit" value="+">
+  </form>
 {% endblock %}
