--- a/templates/RegisterPage.html
+++ b/templates/RegisterPage.html
@@ -1,5 +1,12 @@
 {% extends "base.html" %}
-{% block title %} Main Page {% endblock %}
+{% block title %} Register Page {% endblock %}
 {% block body %}
 <h1> Register Page </h1>
+  <form action = "/">
+    Username:<br>
+    <input type="text" name="username"><br>
+    Password:<br>
+    <input type="text" name="password"><br>
+    <input type="submit" value="Done">
+  </form>
 {% endblock %}
