--- a/templates/LoginPage.html
+++ b/templates/LoginPage.html
@@ -2,11 +2,14 @@
 {% block title %} Login Page {% endblock %}
 {% block body %}
 <h1> Login Page </h1>
-    <form action = "/MainPage">
+    <form action = "/Main">
       Username:<br>
       <input type="text" name="username"><br>
       Password:<br>
       <input type="text" name="password"><br>
-      <input type="submit" value="Submit">
+      <input type="submit" value="Log In">
+    </form>
+    <form action = "/Register">
+      <input type="submit" value="Register">
     </form>
 {% endblock %}
