--- a/templates/MyBlogsPage.html
+++ b/templates/MyBlogsPage.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %} Main Page {% endblock %}
+{% block title %} My Blog Page {% endblock %}
 {% block body %}
 <h1> My Blogs Page </h1>
 {% endblock %}
