better blog page

--- a/templates/CreateBlogPage.html
+++ b/templates/CreateBlogPage.html
@@ -6,7 +6,9 @@
       Blog Title:<br>
       <input type="text" name="title"><br>
       Write Your Blog Below:<br>
-      <input type="text" name="body"><br>
+      <textarea rows = "5" cols = "60" name = "description">
+        Blog
+        </textarea><br>
       <input type="submit" value="Done">
     </form>
 {% endblock %}
