Small changes to CreateBlogPage

--- a/templates/CreateBlogPage.html
+++ b/templates/CreateBlogPage.html
@@ -6,9 +6,11 @@
       Blog Title:<br>
       <input type="text" name="title"><br>
       Write Your Blog Below:<br>
-      <textarea rows = "5" cols = "60" name = "description">
-        Blog
-        </textarea><br>
+      <textarea 
+	rows = "5" 
+	cols = "60" 
+	name = "body">
+      </textarea><br>
       <input type="submit" value="Done">
     </form>
 {% endblock %}
