--- a/templates/RegisterPage.html
+++ b/templates/RegisterPage.html
@@ -2,11 +2,14 @@
 {% block title %} Register Page {% endblock %}
 {% block body %}
 <h1> Register Page </h1>
-  <form action = "/">
+  <form action = "/Registered" method = "GET">
     Username:<br>
     <input type="text" name="username"><br>
     Password:<br>
-    <input type="text" name="password"><br>
+    <input type="password" name="password"><br>
+    Repeat Password:<br>
+    <input type="password" name="repeat"><br>
+
     <input type="submit" value="Done">
-  </form>
+
 {% endblock %}
