passwords repeatinf fixed

--- a/templates/RegisterPage.html
+++ b/templates/RegisterPage.html
@@ -3,6 +3,7 @@
 {% block body %}
 
 <h1> Register Page </h1>
+<h5> {{checker}} </h5>
   <form action = "/Registered" method = "GET">
     Username:<br>
     <input type="text" name="username"><br>
