--- a/templates/LoginPage.html
+++ b/templates/LoginPage.html
@@ -5,11 +5,11 @@
 {% for message in get_flashed_messages() %}
 {{ message }}<br>
 {% endfor %}
-    <form action = "/Main">
+    <form action = "/loginhelper">
       Username:<br>
       <input type="text" name="username"><br>
       Password:<br>
-      <input type="text" name="password"><br>
+      <input type="password" name="password"><br>
       <input type="submit" value="Log In">
     </form>
     <form action = "/Register">
