--- a/templates/CreateBlogPage.html
+++ b/templates/CreateBlogPage.html
@@ -2,13 +2,13 @@
 {% block title %} Create Blog {% endblock %}
 {% block body %}
 <h1> Create Blog Page </h1>
-    <form action = "/MyBlogs">
+    <form action = "/writeBlog">
       Blog Title:<br>
       <input type="text" name="title"><br>
       Write Your Blog Below:<br>
-      <textarea 
-	rows = "5" 
-	cols = "60" 
+      <textarea
+	rows = "5"
+	cols = "60"
 	name = "body">
       </textarea><br>
       <input type="submit" value="Done">
