--- a/templates/RegisterPage.html
+++ b/templates/RegisterPage.html
@@ -3,7 +3,9 @@
 {% block body %}
 
 <h1> Register Page </h1>
-<h5> {{checker}} </h5>
+{% if m %}
+<h5>&#9888; {{m}}</h5>
+{% endif %}
   <form action = "/Registered" method = "GET">
     Username:<br>
     <input type="text" name="username"><br>
@@ -13,5 +15,8 @@
     <input type="password" name="repeat"><br>
 
     <input type="submit" value="Done">
-
+  </form>
+  <form action = "/">
+    <input type="submit" value = "Back to Login Page">
+  </form>
 {% endblock %}
