--- a/templates/CreateBlogPage.html
+++ b/templates/CreateBlogPage.html
@@ -2,7 +2,7 @@
 {% block title %} Create Blog {% endblock %}
 {% block body %}
 <h1> Create Blog Page </h1>
-    <form action = "/writeBlog">
+    <form action = "/createHelper">
       Blog Title:<br>
       <input type="text" name="title"><br>
       Write Your Blog Below:<br>
