--- a/templates/MainPage.html
+++ b/templates/MainPage.html
@@ -5,17 +5,21 @@
     <form action = "/Profile">
       <input type="submit" value="Profile">
     </form>
-    <table style="width:100%">
+    <form action = "/">
+      <input type="submit" value="Log Out">
+    </form>
+    <table style="width:50%" border="1">
       <tr>
-        <th>Author</th>
         <th>Title</th>
-        <th>Contents</th>
+        <th>Author</th>
       </tr>
     {% for i in smth %}
     <tr>
+      <td>
+        <a href={{u[i[1]]}}>
+        {{i[2]}} </a>
+      </td>
       <td>{{i[0]}}</td>
-      <td>{{i[1]}}</td>
-      <td>{{i[2]}}</td>
     </tr>
     {% endfor %}
     </table>
