--- a/templates/MyBlogsPage.html
+++ b/templates/MyBlogsPage.html
@@ -2,4 +2,22 @@
 {% block title %} My Blog Page {% endblock %}
 {% block body %}
 <h1> My Blogs Page </h1>
+<form action = "/Main">
+  <input type="submit" value="Home">
+</form>
+<form action = "/Profile">
+  <input type="submit" value="Back">
+</form>
+<table style="width:50%" border="1">
+  <tr>
+    <th>Title</th>
+    <th>Author</th>
+  </tr>
+  {% for i in mb %}
+  <tr>
+    <td>{{i[2]}}</td>
+    <td>{{i[0]}}</td>
+  </tr>
+  {% endfor %}
+</table>
 {% endblock %}
