--- a/templates/RegisterPage.html
+++ b/templates/RegisterPage.html
@@ -6,7 +6,7 @@
 {% if m %}
 <h5>&#9888; {{m}}</h5>
 {% endif %}
-  <form action = "/Registered" method = "GET">
+  <form action = "/registerHelper" method = "GET">
     Username:<br>
     <input type="text" name="username"><br>
     Password:<br>
@@ -14,7 +14,7 @@
     Repeat Password:<br>
     <input type="password" name="repeat"><br>
 
-    <input type="submit" value="Done">
+    <input type="submit" value="Create Account">
   </form>
   <form action = "/">
     <input type="submit" value = "Back to Login Page">
