--- a/templates/MainPage.html
+++ b/templates/MainPage.html
@@ -5,7 +5,7 @@
     <form action = "/Profile">
       <input type="submit" value="Profile">
     </form>
-    <form action = "/">
+    <form action = "/auth2">
       <input type="submit" value="Log Out">
     </form>
     <table style="width:50%" border="1">
