started working on editing blogs

--- a/templates/BlogPage.html
+++ b/templates/BlogPage.html
@@ -6,4 +6,7 @@
 <h2> Title : {{b[2]}} </h2>
 <p> {{b[3]}} </p>
 {% endif %}
+<form action = "/EditBlog">
+  <input type="submit" value="Edit Blog">
+</form>
 {% endblock %}
