--- a/templates/EditBlog.html
+++ b/templates/EditBlog.html
@@ -2,18 +2,29 @@
 {% block title %} Create Blog {% endblock %}
 {% block body %}
 {% if m %}
+
+<script language="javascript" type="text/javascript">
+function addtext() {
+	var newtext = document.myform.inputtext.value;
+	if (document.myform.placement[1].checked) {
+		document.myform.outputtext.value = "";
+		}
+	document.myform.outputtext.value += newtext;
+}
+</script>
+
 <h5>&#9888; {{m}}</h5>
 {% endif %}
 <h1> Create Blog Page </h1>
     <form action = "/MyBlogs">
       Blog Title:<br>
-      <input type="text" name="title" placeholder= {{title}} ><br>
+      <input type="text" name="title" value= {{title}} ><br>
       Edit your body:<br>
       <textarea
 	rows = "5"
 	cols = "60"
 	name = "body"
-  placeholder = {{body}}>
+  >{{body}}
       </textarea><br>
       <input type="submit" value="Done">
     </form>
