--- a/templates/EditBlog.html
+++ b/templates/EditBlog.html
@@ -8,7 +8,7 @@
 <h5>&#9888; {{m}}</h5>
 {% endif %}
 <h1> Create Blog Page </h1>
-    <form action = "/MyBlogs">
+    <form action = "/EditHelper">
       Blog Title:<br>
       <input type="text" name="title" value= {{title}} ><br>
       Edit your body:<br>
