--- a/templates/EditBlog.html
+++ b/templates/EditBlog.html
@@ -7,7 +7,7 @@
 
 <h5>&#9888; {{m}}</h5>
 {% endif %}
-<h1> Create Blog Page </h1>
+<h1> Edit Blog </h1>
     <form action = "/EditHelper">
       Blog Title:<br>
       <input type="text" name="title" value= {{title}} ><br>
