--- a/templates/EditBlog.html
+++ b/templates/EditBlog.html
@@ -10,7 +10,7 @@
 <h1> Edit Blog </h1>
     <form action = "/EditHelper">
       Blog Title:<br>
-      <input type="text" name="title" value= {{title}} ><br>
+      <input type="text" name="title" value="{{title}}" ><br>
       Edit your body:<br>
       <textarea
 	rows = "5"
