made it so that users cannot edit other users' blogs and only their own

--- a/templates/BlogPage.html
+++ b/templates/BlogPage.html
@@ -3,10 +3,15 @@
 {% block body %}
 <h1> Blog Page </h1>
 {% if b %}
-<h2> Title : {{b[2]}} </h2>
+<h2> Title : {{b[2]}} <h4>by {{b[0]}}</h4> </h2>
 <p> {{b[3]}} </p>
 {% endif %}
-<form action = "/EditBlog">
-  <input type="submit" value="Edit Blog">
+{% if b[0] == u %}
+  <form action = "/EditBlog">
+    <input type="submit" value="Edit Blog">
+  </form>
+{% endif %}
+<form action = "/Main">
+  <input type="submit" value="Home">
 </form>
 {% endblock %}
