added edit blog error handling

--- a/templates/CreateBlogPage.html
+++ b/templates/CreateBlogPage.html
@@ -16,4 +16,7 @@
       </textarea><br>
       <input type="submit" value="Done">
     </form>
+    <form action = "/Profile">
+      <input type="submit" value="Back">
+    </form>
 {% endblock %}
