added delete blog post option

--- a/templates/EditBlog.html
+++ b/templates/EditBlog.html
@@ -18,6 +18,9 @@
       <input type="submit" value="Done">
     </form>
     <form action = "/MyBlogs">
+      <input type="submit" name ="delete" value="Delete This Post" onclick="return confirm('Are you sure you want to delete this post?');">
+    </form>
+    <form action = "/MyBlogs">
       <input type="submit" value="View My Blogs">
     </form>
     <form action = "/Main">
