--- a/templates/ProfilePage.html
+++ b/templates/ProfilePage.html
@@ -12,7 +12,7 @@
   <form action = "/Main">
     <input type="submit" value="Home">
   </form>
-  <form action = "/">
+  <form action = "/auth2">
     <input type="submit" name ="delete" value="Delete My Account" onclick="return confirm('Are you sure you want to delete your account?');">
   </form>
 {% endblock %}
