--- a/templates/BlogPage.html
+++ b/templates/BlogPage.html
@@ -8,10 +8,11 @@
 {% endif %}
 {% if b[1] == u %}
   <form action = "/EditBlog">
-    <input type="submit" value="Edit Blog">
+    <input class = "button" type="submit" value="Edit Blog">
   </form>
 {% endif %}
+<br>
 <form action = "/Main">
-  <input type="submit" value="Home">
+  <input class = "button" type="submit" value="Home">
 </form>
 {% endblock %}
