--- a/templates/LoginPage.html
+++ b/templates/LoginPage.html
@@ -7,12 +7,13 @@
 {% endif %}
     <form action = "/loginHelper">
       Username:<br>
-      <input type="text" name="username"><br>
+      <input class = "input" type="text" name="username"><br>
       Password:<br>
-      <input type="password" name="password"><br>
-      <input type="submit" value="Log In">
+      <input class = "input" type="password" name="password"><br><br>
+      <input class = "button" type="submit" value="Log In">
     </form>
+    <br>
     <form action = "/Register">
-      <input type="submit" value="Register">
+      <input class = "button" type="submit" value="Register">
     </form>
 {% endblock %}
