--- a/templates/EditBlog.html
+++ b/templates/EditBlog.html
@@ -7,23 +7,26 @@
 <h1> Edit Blog </h1>
     <form action = "/EditHelper">
       Blog Title:<br>
-      <input type="text" name="title" value="{{title}}" ><br>
+      <input class = "input" type="text" name="title" value="{{title}}" ><br>
       Edit your body:<br>
-      <textarea
+      <textarea class = "input"
 	rows = "5"
 	cols = "60"
 	name = "body"
   >{{body}}
-      </textarea><br>
-      <input type="submit" value="Done">
+      </textarea><br><br>
+      <input class = "button" type="submit" value="Done">
     </form>
+    <br>
     <form action = "/MyBlogs">
-      <input type="submit" name ="delete" value="Delete This Post" onclick="return confirm('Are you sure you want to delete this post?');">
+      <input class = "button" type="submit" name ="delete" value="Delete This Post" onclick="return confirm('Are you sure you want to delete this post?');">
     </form>
+    <br>
     <form action = "/MyBlogs">
-      <input type="submit" value="View My Blogs">
+      <input class = "button" type="submit" value="View My Blogs">
     </form>
+    <br>
     <form action = "/Main">
-      <input type="submit" value="Home">
+      <input class = "button" type="submit" value="Home">
     </form>
 {% endblock %}
