--- a/templates/MainPage.html
+++ b/templates/MainPage.html
@@ -6,12 +6,14 @@
   <p>&#9888; {{m}} </p>
   {% endif %}
     <form action = "/Profile">
-      <input type="submit" value="Profile">
+      <input class = "button" type="submit" value="Profile">
     </form>
+    <br>
     <form action = "/auth2">
-      <input type="submit" name="logout" value="Log Out">
+      <input class = "button" type="submit" name="logout" value="Log Out">
     </form>
-    <table style="width:50%" border="1">
+    <br>
+    <table>
       <tr>
         <th>Title</th>
         <th>Author</th>
@@ -19,7 +21,7 @@
     {% for i in smth %}
     <tr>
       <td>
-        <a href={{u[i[0]]}}>
+        <a id = "tableText" href={{u[i[0]]}}>
         {{i[2]}} </a>
       </td>
       <td>{{i[1]}}</td>
