--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel = "stylesheet" type = "text/css" href = "/static/css/style.css">
     <title>{% block title %}{% endblock %}</title>
     </head>
     <body>
